Fix some furigana alignment

--- a/_sass/_japanese.scss
+++ b/_sass/_japanese.scss
@@ -14,6 +14,8 @@ $japanese-hero-background-color: rgba(0, 0, 0, 0.05);
 }
 
 ruby {
+  align-items: center;
+
   &.japanese {
     display: inline-flex;
     flex-direction: column;
